Footnote numbers should appear after punctuation and without extra space(s)

--- a/01-big-shiny.Rmd
+++ b/01-big-shiny.Rmd
@@ -8,7 +8,7 @@
 
 If you are reading this page, chances are you already know what a `{shiny}` application (sometimes shortened as "`{shiny}` app") is—**a web application that communicates with R, built in R, and working with R**.
 The beauty of `{shiny}` [@R-shiny] is that it makes it easy for someone already familiar with R to create a small app in a matter of hours.
-With small and minimal `{shiny}` apps, no knowledge of HTML, CSS or JavaScript is required, and you do not have to think about technical elements that usually come with web applications—for example, you do not have to think about the port the application is served on: `{shiny}` picks one for you [^big-shiny-1] .
+With small and minimal `{shiny}` apps, no knowledge of HTML, CSS or JavaScript is required, and you do not have to think about technical elements that usually come with web applications—for example, you do not have to think about the port the application is served on: `{shiny}` picks one for you.[^big-shiny-1]
 Same goes for serving external dependencies: the application comes with its set of CSS and JavaScript dependencies that a common `{shiny}` developer does not need to worry about.
 And that is probably one of the main reasons why this package has become so successful over the years—**with very little training, you can rapidly create a proof-of-concept (PoC) for a data product, showcase an algorithm, or present your results in an elegant and accessible user interfaces**.
 
@@ -34,7 +34,7 @@ Ready to start engineering production-grade `{shiny}` apps?
 ### Reaching the cliff of complexity
 
 Building a `{shiny}` application seems quite straightforward when it comes to small prototypes or proof of concepts: after a few hours of practice and documentation reading, most R developers can have a small working application.\
-But things change when your application reaches "the cliff of complexity" [^big-shiny-2] , i.e. that moment when the application reaches a state when it can be qualified as "complex".
+But things change when your application reaches "the cliff of complexity",[^big-shiny-2] i.e. that moment when the application reaches a state when it can be qualified as "complex".
 
 [^big-shiny-2]: We borrow this term from Charity Major, as heard in *Test in Production with Charity Majors* CoRecursive #019, _Aug 31, 2018_.
 
@@ -48,7 +48,7 @@ Or as noted in _Refactoring at Scale_ [@lemaire2020], "It becomes nearly impossi
 
 Building on top of these quotes, let's try to come up with a definition that will serve us in the context of engineering `{shiny}` applications.
 
-When building software, we can think of complexity from two points of view: the complexity as it is seen by the developer, and the complexity as it is seen by the customer/end user [^big-shiny-4] .
+When building software, we can think of complexity from two points of view: the complexity as it is seen by the developer, and the complexity as it is seen by the customer/end user.[^big-shiny-4]
 
 [^big-shiny-4]: From *The Art of Unix Programming*, "Chapter 13: Speaking of Complexity" [@ericraymond2003].
 
@@ -98,7 +98,7 @@ Another good example is `{shiny}`'s `dateRangeInput()` function.
 This function requires the user to choose a start date and an end date.
 However, the function allows the user to choose a start date which is before the end (that is the behavior of the JavaScript plugin used in `{shiny}` to create this input).
 But allowing this behavior leads to bugs, notably in a context of full reactivity.
-Handling this special case is completely doable: with a little bit of craft, you can watch what the user inputs and throw an error if the start is after the end [^big-shiny-5] .
+Handling this special case is completely doable: with a little bit of craft, you can watch what the user inputs and throw an error if the start is after the end.[^big-shiny-5]
 On one hand, that solution increases implementation complexity, while on the other hand, allowing this naive behavior requires the user to think carefully about what they are selecting, thus increasing the interface complexity.
 
 [^big-shiny-5]: See [shiny/issues/2043\#issuecomment-525640738](https://github.com/rstudio/shiny/issues/2043#issuecomment-525640738){target="_blank"} for an example.
@@ -121,9 +121,9 @@ But before that, let's dive into code complexity.
 
 The total number of lines of code, and the number of files, can be good clue of potential complexity, but only if used as an order of magnitude (for example, a 10,000-line codebase is potentially more complex than a 100-line codebase), but should not be relied on if used strictly, even more if you try to reduce the number of lines by sacrificing code readability.
 
-R is very permissive when it comes to indentation and line breaks, and, unlike JavaScript or CSS, it is generally not minified [^big-shiny-6].
+R is very permissive when it comes to indentation and line breaks, and, unlike JavaScript or CSS, it is generally not minified.[^big-shiny-6]
 In R, the number of lines of code depends on your coding style and the packages you are using. For example, the `{tidyverse}` [@tidyverse2019] style guide encourages the use of `%>%` (called "pipe"), with one function by line, producing more lines in the end code: "`%>%` should always have a space before it, and should usually be followed by a new line" ([tidyverse style guide](https://style.tidyverse.org/pipes.html){target="_blank"}).
-So you can expect a "tidyverse-centric" package to contain more lines of code, yet the pipe itself has been thought of as a tool to lower code complexity by enhancing its readability [^big-shiny-7].
+So you can expect a "tidyverse-centric" package to contain more lines of code, yet the pipe itself has been thought of as a tool to lower code complexity by enhancing its readability.[^big-shiny-7]
 
 [^big-shiny-6]: The minification process is the process of removing all blank characters and putting everything on one line so that the file in the output is much smaller.
 
@@ -170,7 +170,7 @@ Still, this metric can be useful to reinforce what you have learned from other m
 It is rather unlikely that you will find this "extreme" coding style we showed above, and even if it might not make sense to compare two codebases that just differ by 1% or 2 % of lines of code, it is very likely that a codebase which is ten, one hundred, one thousand times larger is a more complex software.
 
 Another good metric related to code complexity is the number of files in the project: R developers tend to split their functions into several files, so the more files you will find in a project, the larger the codebase is.
-And numerous files can also be a sign of maintenance complexity, as it may be harder to reason about an app logic that is split into several files than about something that fits into one linear code inside one file [^big-shiny-8].
+And numerous files can also be a sign of maintenance complexity, as it may be harder to reason about an app logic that is split into several files than about something that fits into one linear code inside one file.[^big-shiny-8]
 On the other hand, one big 10,000-line file which is standing alone in the project is not a good sign either.
 
 [^big-shiny-8]:  To handle the complexity of splitting into files, you can set filenames to follow the structure of the project.
@@ -471,7 +471,7 @@ Some important metrics to watch there are as follow:
 -   Test coverage: the more the better, as a large code coverage should imply that bugs are more easily caught.
 -   The number of downloads: a largely downloaded package will likely be less prone to bug, as it will be used by a large user base.
 -   Number of dependencies: the more a package has dependencies, the more likely it is that at some point it time, something in the dependency graph will break.
--   Dates of first publish on CRAN, last publish, and updates: a package actively maintained is a good sign[^big-shiny-10].
+-   Dates of first publish on CRAN, last publish, and updates: a package actively maintained is a good sign.[^big-shiny-10]
 
 [^big-shiny-10]:  Even if this is not an absolute rule, some packages haven't been updated for a long time but are still completely reliable.
 
@@ -550,7 +550,7 @@ And **if these people cannot use the application because it is too hard to use, 
 Of course, "immortal" is a little bit far-fetched, but when designing the application, you should aim for robustness through the years, by engineering a (theoretically) immortal application.
 
 Planning for the future is a very important component of a successful `{shiny}` app project.
-Once the app is out, it is successful if it can **exist in the long run, with all the hazards that this implies**: new package versions that could potentially break the codebase, sudden calls for the implementation of new features in the global interface, changing key features of the UI or the back-end, not to mention passing the codebase along to someone who has not worked on the first version, and who is now in charge of developing the next version [^big-shiny-12] .
+Once the app is out, it is successful if it can **exist in the long run, with all the hazards that this implies**: new package versions that could potentially break the codebase, sudden calls for the implementation of new features in the global interface, changing key features of the UI or the back-end, not to mention passing the codebase along to someone who has not worked on the first version, and who is now in charge of developing the next version.[^big-shiny-12]
 And this, again, is hard to do without effective planning and efficient engineering.
 
 [^big-shiny-12]: In fact, this new person might simply be you, a month from now.
