--- a/03-structure.Rmd
+++ b/03-structure.Rmd
@@ -80,7 +80,7 @@ The good news is that using the R package structure helps you leverage the commo
 
 -   `Vignettes` are longer-form documentation that explains in more depth how to use your app. They are also useful if you need to detail the core functions of the application using a static document, notably for prototyping and/or for exchanging with the client. We will get back to `Vignettes` in Chapter \@ref(building-ispum-app) when we will talk about prototyping.
 
--   Function documentation. Every function in your package should come with its own documentation, even if it is just for your future self. "Exported" functions, the one which are available once you run `library(myapp)`, should be fully documented and will be listed in the package help page. Internal functions need less documentation, but documenting them is the best way to be sure you can come back to the app in a few months and still know why things are the way they are, what the pieces of the apps are used for, and how to use these functions [^structure-1] .
+-   Function documentation. Every function in your package should come with its own documentation, even if it is just for your future self. "Exported" functions, the one which are available once you run `library(myapp)`, should be fully documented and will be listed in the package help page. Internal functions need less documentation, but documenting them is the best way to be sure you can come back to the app in a few months and still know why things are the way they are, what the pieces of the apps are used for, and how to use these functions.[^structure-1]
 
 -   If needed, you can build a `{pkgdown}` website, that can either be deployed on the web or kept internally. It can contain installation steps for I.T., internal features use for developers, a user guide, etc.
 
@@ -252,7 +252,7 @@ We assume that you know the saying that "if you copy and paste something more th
 In a `{shiny}` application, how can we refactor a partially repetitive piece of code so that it is reusable?
 
 Yes, you guessed right: using shiny modules.
-**`{shiny}` modules aim at three things: simplify "id" namespacing, split the codebase into a series of functions, and allow UI/Server parts of your app to be reused. Most of the time, modules are used to do the two first. In our case, we could say that 90% of the modules we write are never reused [^structure-2] ; they are here to allow us to split the codebase into smaller, more manageable pieces**.
+**`{shiny}` modules aim at three things: simplify "id" namespacing, split the codebase into a series of functions, and allow UI/Server parts of your app to be reused. Most of the time, modules are used to do the two first. In our case, we could say that 90% of the modules we write are never reused;[^structure-2] they are here to allow us to split the codebase into smaller, more manageable pieces**.
 
 [^structure-2]: Most of the time, pieces / panels of the app are too unique to be reused elsewhere.
 
@@ -371,7 +371,7 @@ ns("choice")
 
 And here it is, our namespaced `id`!
 
-Each call to a module with `choice_server()` requires a different `id` argument that will allow creating various internal namespaces to prevent from id conflicts [^structure-3] .
+Each call to a module with `choice_server()` requires a different `id` argument that will allow creating various internal namespaces to prevent from id conflicts.[^structure-3]
 Then you can have as many `validate` ids as you want in your whole app, as long as this input has a unique id inside your module.
 
 [^structure-3]: Well, of course you can still have inner module id conflicts, but they are easier to avoid, detect, and fix.
