--- a/05-workflow.Rmd
+++ b/05-workflow.Rmd
@@ -24,9 +24,8 @@ The first part of the workflow is the __design__ part.
 This very first step is the one that happens before starting to code: it is the one where you are thinking about the general implementation and features of the application, and where you build the general roadmap for the coding process. 
 During the process of designing, you will define how the application will be built: somewhere between users' dreams, what is technically possible, and the time you have to build the application.  
 
-This first step is not `{shiny}` or R specific, it is something software engineers do for any software or web application: discuss with the clients
-^[We use the term "client" in a loose sense, meaning the person(s) who is/are ordering the application.]
-, the end users, and the developers who will work on the project. 
+This first step is not `{shiny}` or R specific, it is something software engineers do for any software or web application: discuss with the clients,^[We use the term "client" in a loose sense, meaning the person(s) who is/are ordering the application.]
+ the end users, and the developers who will work on the project. 
 The idea with this first step is to get a clear idea of what everybody involved in the project wants/is able to do: 
 
 + From the client/end user's point of view, this step involves working on getting a clear idea of what they want the application to do, and to confront this view with the developers to evaluate what is possible to do, how much time it will take to implement desired features, etc.
