--- a/06-ux-matters.Rmd
+++ b/06-ux-matters.Rmd
@@ -4,7 +4,7 @@
 
 Let's state the truth: no matter how complex and innovative your back-end is, your application is bad if your user experience (UX) is bad.
 That's the hard truth. 
-We have a natural tendency, as R-coders, to be focused on the back-end, i.e. the server part of the application, which is perfectly normal—chances are you did not come to R to design front-ends [^ux-matters-2].
+We have a natural tendency, as R-coders, to be focused on the back-end, i.e. the server part of the application, which is perfectly normal—chances are you did not come to R to design front-ends.[^ux-matters-2]
 
 [^ux-matters-2]: The front-end is the visual part of your application - the one your user interacts with - as opposed to the back-end, which is what is installed on the server, the part the end user does not see.
     In `{shiny}`, front-end corresponds to the UI, while back-end, to the server.
@@ -140,7 +140,7 @@ For example, if your `{shiny}` app relies on a database connection, you should g
 
 In fact, this is a crucial thing when it comes to making your app successful: **you should always fail gracefully and informatively**.
 That means that even when your R code fails, the whole app should not fail.
-If the R code fails for some reason, the user should either get nothing back or an informative bug message, not be faced with a grayish version of the application[^ux-matters-3].
+If the R code fails for some reason, the user should either get nothing back or an informative bug message, not be faced with a grayish version of the application.[^ux-matters-3]
 Note that using external widgets, like the one from the `{DT}` package (or any other that binds to an external JavaScript library), can make this principle harder to apply: as you have less control over what is happening when using this widget, gracefully handling errors can be tricky.
 Indeed, `{DT}` sometimes returns errors that originates from the user's browser, so that has nothing to do with R.
 In that case, it might be hard to catch this error and gracefully manage it.
@@ -241,12 +241,12 @@ Elements that are "visually nested" are related.
 Of course, this is not an absolute rule, and there is always room for creativity when it comes to design, but you should keep in mind that too much surprise can lead to users being lost when it comes to understanding how to use the application.
 
 Weirdly enough, that is an easy thing to spot when we arrive on a web page or an app: it can either feel "natural", or you can immediately see that something is off.
-The hard thing is that it is something you spot when you are a new-comer: developing the app makes us so familiar with the app that we might miss when something is not used the way it is conventionally used [^ux-matters-4] .
+The hard thing is that it is something you spot when you are a new-comer: developing the app makes us so familiar with the app that we might miss when something is not used the way it is conventionally used.[^ux-matters-4]
 
 [^ux-matters-4]: For a good summary of these, see "The cranky user: The Principle of Least Astonishmen" <https://www.ibm.com/developerworks/web/library/us-cranky10/us-cranky10-pdf.pdf>
 
 Let's exemplify this with the "Render" button from the [`{tidytuesday201942}`](https://connect.thinkr.fr/tidytuesday201942/) application.
-This app is built on top of Bootstrap 4, which has no CSS class for a `{shiny}` action button [^ux-matters-5].
+This app is built on top of Bootstrap 4, which has no CSS class for a `{shiny}` action button.[^ux-matters-5]
 Result: without any further CSS, the buttons do not come out as buttons, making it harder to decipher that they are actually buttons.
 Compare the native design shown in Figure \@ref(fig:06-ux-matters-5) to the one with a little bit of CSS (which is the one online) shown in Figure \@ref(fig:06-ux-matters-6).
 
@@ -458,7 +458,7 @@ Yet, dynamic is not always the solution, and for several reasons.
 
 Dynamic elements are slower to render than fixed ones.
 Most of the time (if not always), rendering dynamic elements means that you will bind some external libraries, and maybe you will have to make R convert data from one format to another.
-For example, rendering a `{ggplot2}` plot will be faster than rendering a `ggplotly()` plot, which has to convert from one format to another [^ux-matters-6] .
+For example, rendering a `{ggplot2}` plot will be faster than rendering a `ggplotly()` plot, which has to convert from one format to another.[^ux-matters-6]
 
 [^ux-matters-6]: Well, maybe the native `{plotly}` [@plotly2020] implementation is faster, but you get the spirit.
 
@@ -497,7 +497,7 @@ To sum up, a good rule to live by is that you should not add a feature for the s
 ### About accessibility
 
 When building professional `{shiny}` applications, you have to keep in mind that, potentially, this app will be consumed by a large audience.
-**A large audience means that there is a chance that your app will be used by people with visual, mobility, or maybe cognitive disabilities** [^ux-matters-7] .
+**A large audience means that there is a chance that your app will be used by people with visual, mobility, or maybe cognitive disabilities**.[^ux-matters-7]
 Web accessibility deals with the process of making the web available to people with disabilities.
 
 [^ux-matters-7]: And of course, other type of disabilities.
@@ -539,7 +539,7 @@ tags$article(
 ```
 
 One other HTML method you can use is tag attributes as metadata.
-Tag attributes are complementary elements you can add to a tag to add information: most of the time, you will be using it to add a CSS class, an identifier, or maybe some events like `onclick` [^ux-matters-8] .
+Tag attributes are complementary elements you can add to a tag to add information: most of the time, you will be using it to add a CSS class, an identifier, or maybe some events like `onclick`.[^ux-matters-8]
 But these can also be used to add, for example, an alternate text to an image: this `alt` being the one which is read when the image is not available, either because the page could not reach the resource, or because the person navigating the app is using a screen-to-speech technology.
 To do this, we can use the `tagAppendAttributes()` function from `{shiny}`, which allows us to add attributes to an HTML element.
 
