--- a/07-step-by-step-design.Rmd
+++ b/07-step-by-step-design.Rmd
@@ -24,7 +24,7 @@ Same thing: we're jumping straight into solving a programming problem when someo
     But trying to assess what exists before jumping into coding will definitely save you some time in the long run.
 
 Of course, implementing your own solution might be a good thing in specific cases: avoiding heavy dependencies, incompatible licensing, the joy of the intellectual challenge, but **when building production software, it is safer to go for an existing solution if there is one and it fits in the project: existing packages/software that are widely used by the community and by the industry benefit from wider testing, wider documentation, and a larger audience if you need to ask questions**.
-And of course, it saves time, be it immediately or in the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevents you from having to detect and correct bugs, saving you time tomorrow [^step-by-step-design-2] .
+And of course, it saves time, be it immediately or in the long run: re-using an existing solution allows you to save time re-implementing it, so you save time today, but it also prevents you from having to detect and correct bugs, saving you time tomorrow.[^step-by-step-design-2]
 
 [^step-by-step-design-2]: Of course, it is not an absolute rule: you might also inherit from the bug created by the open source solution.
 
@@ -110,7 +110,7 @@ Some questions you might ask:
 
 Those might seem like weird questions if you are just focusing on the very technical side of the app implementation, but think about where the app will be used: the application used while driving agricultural machines might need fewer interactive things, bigger fonts, simpler interface, fewer details, and more direct information.
 If you are building a `{shiny}` app for a team of sellers who are always on the road, chances are they will need an app that they can browse from their mobile.
-And developing for mobiles requires a different kind of mindset [^step-by-step-design-3] .
+And developing for mobiles requires a different kind of mindset.[^step-by-step-design-3]
 
 [^step-by-step-design-3]: For developing an app that is mobile first, you can have a look at the great `{shinyMobile}` [@R-shinyMobile] package made by the amazing Rinterface (<https://rinterface.com/>) team.
 
