--- a/09-prototyping.Rmd
+++ b/09-prototyping.Rmd
@@ -99,7 +99,7 @@ remotes::install_github("Thinkr-open/shinipsum")
 
 This package includes a series of functions that generates random placeholders.
 For example, `random_ggplot()` generates random `{ggplot2}` [@R-ggplot2] elements.
-If we run this code two times, we should get different results [^prototyping-1] :
+If we run this code two times, we should get different results:[^prototyping-1]
 
 [^prototyping-1]: Well, there is a probability that we will get the same plot twice, and but that is the beauty of randomness.
 
@@ -175,7 +175,7 @@ random_print(type = "model")
 and text, image, `ggplotly`, `dygraph`, and `DT`.
 
 `{shinipsum}` is also a good tool if you want to demonstrate what a given UI framework will look like if used in `{shiny}`.
-This is, for example, what you find with `{golemhtmltemplate}`, available at [engineering-shiny.org/golemhtmltemplate/](https://engineering-shiny.org/golemhtmltemplate/), which uses a W3 web page template[^prototyping-2].
+This is, for example, what you find with `{golemhtmltemplate}`, available at [engineering-shiny.org/golemhtmltemplate/](https://engineering-shiny.org/golemhtmltemplate/), which uses a W3 web page template.[^prototyping-2]
 
 [^prototyping-2]: This application is also a demonstration of how to build a `{golem}` application using `htmltemplate()`.
 
