--- a/10-step-by-step-build.Rmd
+++ b/10-step-by-step-build.Rmd
@@ -28,7 +28,7 @@ paks <- paste0("`{", eval(formals(golem::use_recommended_deps)$recommended), "}`
 ```
 
 If you are building your application using `{golem}`, you will have 3 default dependencies: `{golem}` itself, `{shiny}`, and `{config}`.
-If you call `golem::use_recommended_deps()` in the first workflow script, you will also have `r knitr::combine_words(paks)` as dependencies to your package [^step-by-step-build-1] .
+If you call `golem::use_recommended_deps()` in the first workflow script, you will also have `r knitr::combine_words(paks)` as dependencies to your package.[^step-by-step-build-1]
 But what about other dependencies like `{ggplot2}`? These ones need to be added by hand.
 
 [^step-by-step-build-1]: The idea with this function is to provide a shortcut for adding commonly used dependencies, so that you don't have to do it by hand.
@@ -41,18 +41,18 @@ Here is how to process for a new dependency:
 
 ### Importing packages and functions
 
-There are two places where the dependencies of your application need to be managed [^step-by-step-build-2] : the `DESCRIPTION` file and the `NAMESPACE` file.
+There are two places where the dependencies of your application need to be managed:[^step-by-step-build-2] the `DESCRIPTION` file and the `NAMESPACE` file.
 
 [^step-by-step-build-2]: This is not `{shiny}` or `{golem}` specific, but a requirement for any package.
 
 -   The `DESCRIPTION` file dictates which packages have to be installed **when your application is installed**.
     For example, when you install `{golem}` on your machine, you will also need other packages that are internally used by `{golem}`.
     And your application will also have dependencies: at the very least `{shiny}`, `{golem}`, and `{config}`.
-    When building your application, you have to list these requirements somewhere, and the standard way to do that is by using the `DESCRIPTION` file[^step-by-step-build-3].
+    When building your application, you have to list these requirements somewhere, and the standard way to do that is by using the `DESCRIPTION` file.[^step-by-step-build-3]
 
 -   The `NAMESPACE` file describes how your app interacts with the R session at run time, i.e. **when your application is launched**.
     With this `NAMESPACE` file, you can specify only a subset of functions to import from other packages: for example, you can choose to import only `renderDT()` and `DTOutput()` from `{DT}`, instead of importing all the functions.
-    This selective import mechanism allows you to avoid namespace conflicts: for example, between `jsonlite::flatten()` and `purrr::flatten()` [^step-by-step-build-4].
+    This selective import mechanism allows you to avoid namespace conflicts: for example, between `jsonlite::flatten()` and `purrr::flatten()`.[^step-by-step-build-4]
     To do so, we will need to go to every script that defines one or several function/s, and add a `{roxygen2}` [@R-roxygen2] tag, in the following form : `#' @importFrom jsonlite fromJSON` and `#' @importFrom purrr flatten`: that way, you are only importing `fromJSON()` from `{jsonlite}`.
 
 [^step-by-step-build-3]: Note that most of the time, you will not be filling this by hand, but by using `usethis::use_package()`.
@@ -103,7 +103,7 @@ golem::add_utils( "helpers" )
 -   The first will create a `R/fct_helpers.R` file.
 -   The second will create a `R/utils_helpers.R` file.
 
-The idea, as explained before, is that as soon as you open a `{golem}`-based project, you are able to identify what the files contain, without having to open them [^step-by-step-build-5] .
+The idea, as explained before, is that as soon as you open a `{golem}`-based project, you are able to identify what the files contain, without having to open them.[^step-by-step-build-5]
 
 [^step-by-step-build-5]:  The `utils_*` convention is a pretty common one: a lot of R packages contain a file called `utils.R` that bundles a series of small functions that are used throughout the package.
 
@@ -240,7 +240,7 @@ Note also that if you want to add the code coverage of your application inside a
 #### B. Continuous Integration {.unnumbered}
 
 Continuous integration, on the other hand, is ensuring the software is still working whenever a change is made by one of the developers.
-The idea is to add to the centralized version control system (for example, Git) [^step-by-step-build-6] a service like Travis CI, GitHub Action (if you are on GitHub), or GitLab CI (for GitLab) that runs a series of commands whenever something is integrated in the repository, i.e. every time a change to the codebase is made.
+The idea is to add to the centralized version control system (for example, Git)[^step-by-step-build-6] a service like Travis CI, GitHub Action (if you are on GitHub), or GitLab CI (for GitLab) that runs a series of commands whenever something is integrated in the repository, i.e. every time a change to the codebase is made.
 In other words, every time a new piece of code is sent to the central repository, a service runs regression tests that check that the software is still in a valid, working state.
 
 [^step-by-step-build-6]: We will get back to version control in the Chapter \@ref(version-control), "Version Control"..
@@ -256,7 +256,7 @@ You can set up various continuous integration services automatically by using fu
 
 If ever you want to add badges to your `README` files for these services, `{usethis}` also comes with a series of functions to do just that: `use_travis_badge()`, `use_appveyor_badge()`, `use_circleci_badge()` and `use_github_actions_badge()`.
 
-CI services can do a lot more, like for example, deploy the application, build a container and send it to a container registry, compile RMarkdown files [^step-by-step-build-7] , etc.
+CI services can do a lot more, like for example, deploy the application, build a container and send it to a container registry, compile RMarkdown files, etc.[^step-by-step-build-7]
 The possibilities are almost limitless!
 
 [^step-by-step-build-7]: For example, the online version of this book is compiled to HTML every time something is merged into the `master` branch on GitHub.
