--- a/11-step-by-step-secure.Rmd
+++ b/11-step-by-step-secure.Rmd
@@ -143,7 +143,7 @@ await page.waitForSelector('.row > .col > \
 ```
 
 Be aware, though, that this extension does not record everything, at least with the version used while writing this book (`0.7.1`).
-For example, typing inside a text input is not recorded: that is completely doable inside `puppeteer`, yet not recorded by this extension [^step-by-step-secure-2] .
+For example, typing inside a text input is not recorded: that is completely doable inside `puppeteer`, yet not recorded by this extension.[^step-by-step-secure-2]
 
 [^step-by-step-secure-2]: See <https://github.com/puppeteer/puppeteer/issues/441> for the code to set the text input values.
 
