--- a/13-deploy.Rmd
+++ b/13-deploy.Rmd
@@ -74,7 +74,7 @@ Then, they can do `library(yourpackagename)` and `run_app()` on their machine.
 
 The upside of building the application `{golem}`, i.e. as a package, is that you can share your application on a remote package manager, the more widely used, for example, on the CRAN like `{dccvalidator}` [@R-dccvalidator], or on BioConductor like `{spatialLIBD}` [@R-spatialLIBD].
 But any other package manager will work: for example, if the company uses RStudio Package Manager, your application can be installed here in the same way as any other package.
-If your application is open source, the package structure also allows you to install from GitHub, by using the `remotes::install_github()` function [^deploy-with-golem-1].
+If your application is open source, the package structure also allows you to install from GitHub, by using the `remotes::install_github()` function.[^deploy-with-golem-1]
 For example, this is what you can do with `{hexmake}` or `{tidytuesday}`: as they are open-source packages, they can be installed from GitHub.
 Then, once your application is installed as a package on the users' machines, they can do `library(yourpackagename)` and `run_app()`.
 
