--- a/14-when_optimize.Rmd
+++ b/14-when_optimize.Rmd
@@ -131,7 +131,7 @@ Leading a successful project means that you should, as much as possible, find th
 
 #### A. Identifying bottlenecks {.unnumbered}
 
-The best way to profile R code is by using the `{profvis}` [@R-profvis] package [^when_optimize-1] , a package designed to evaluate how much time each part of a function call takes.
+The best way to profile R code is by using the `{profvis}` [@R-profvis] package,[^when_optimize-1] a package designed to evaluate how much time each part of a function call takes.
 With `{profvis}`, you can spot the bottleneck in your function.
 Without an automated tool to do the profiling, the developers would have to profile by guessing, which will, most of the time, come with bad results:
 
@@ -143,7 +143,7 @@ Without an automated tool to do the profiling, the developers would have to prof
 
 Instead of guessing, it is a safe bet to go for a tool like `{profvis}`, which allows you to have a detailed view of what takes a long time to run in your R code.
 
-Using this package is quite straightforward: put the code you want to benchmark inside the `profvis()` function [^when_optimize-2] , wait for the code to run, and that is it; you now have an analysis of your code running time.
+Using this package is quite straightforward: put the code you want to benchmark inside the `profvis()` function,[^when_optimize-2] wait for the code to run, and that is it; you now have an analysis of your code running time.
 
 [^when_optimize-2]: Do not forget to add `{}` inside `profvis({})` if you want to write several lines of code.
 
@@ -324,7 +324,7 @@ The nice thing is that this tool not only covers what you see (i.e. not only wha
 
 Already in 2016, Google [wrote](https://www.thinkwithgoogle.com/data/web-traffic-from-smartphones-and-tablets/) that "*More than half of all web traffic now comes from smartphones and tablets*".
 Knowing the exact number of visitors that browse through mobile is hard: the web is vast, and not all websites record the traffic they receive.
-Yet many, if not all, studies of how the web is browsed report the same results: more traffic is created via mobile than via computer [^when_optimize-3] .
+Yet many, if not all, studies of how the web is browsed report the same results: more traffic is created via mobile than via computer.[^when_optimize-3]
 
 [^when_optimize-3]: broadbandsearch <https://www.broadbandsearch.net/blog/mobile-desktop-internet-usage-statistics> for example, reports a 53.3% share for mobile browsing.
 
@@ -338,7 +338,7 @@ It is always a good mood booster to see our app passing some audited points!
 
 Here is a quick introduction to this tool:
 
--   Open Chrome in incognito mode (File \> New Icognito Window[^when_optimize-4]), so that the page performance is not influenced by any of the installed extensions in your Google Chrome.
+-   Open Chrome in incognito mode (File \> New Icognito Window),[^when_optimize-4] so that the page performance is not influenced by any of the installed extensions in your Google Chrome.
 -   Open your developer console, either by going to View \> Developer \> Developer tools, by right-clicking \> Inspect, or with the keyboard shortcut ctrl/cmd + alt + I, as shown in Figure \@ref(fig:14-when-optimize-11).
 -   Go to the "Audit" tab.
 -   Configure your report (or leave the default).
@@ -346,7 +346,7 @@ Here is a quick introduction to this tool:
 
 [^when_optimize-4]: This mode opens an "anonymous" session, in the sense that you don't have access to your account and extensions, and that the visits will not be recorded in your history.
 
-Note that you can also install a command-line tool with `npm install -g lighthouse` [^when_optimize-5] , then run `lighthouse http://urlto.audit`: it will produce either a JSON (if asked) or an HTML report (the default).
+Note that you can also install a command-line tool with `npm install -g lighthouse`,[^when_optimize-5] then run `lighthouse http://urlto.audit`: it will produce either a JSON (if asked) or an HTML report (the default).
 
 [^when_optimize-5]: Being a NodeJS application, you will need to have NodeJS installed on your machine.
 
@@ -376,7 +376,7 @@ Once the audit is finished, you have some basic but useful indications about you
 
 -   Best practices bundles a list of "misc" best practices around web applications.
 
--   SEO, search engine optimization, or how your app will perform when it comes to search engine indexation[^when_optimize-6].
+-   SEO, search engine optimization, or how your app will perform when it comes to search engine indexation.[^when_optimize-6]
 
 -   Progressive Web App (PWA): A PWA is an app that can run on any device, *"reaching anyone, anywhere, on any device with a single codebase"*.
     Google audit your application to see if your application fits with this idea.
