--- a/15-common-app-caveats.Rmd
+++ b/15-common-app-caveats.Rmd
@@ -77,9 +77,9 @@ And the more you work on your app, the more complex it gets, and the more you wi
 In this section, we will deal with reactivity, how to have more control over it, and how to share data across modules without relying on passing along reactive objects.
 
 This application is in this state of infinite loop because it starts in a mutually inconsistent state: the `dateInput()` year value is the current year, while the `selectInput()` value is `2010`. 
-One way to solve this is to add some extra logic to the app by selecting the current year for `selectInput()`, and adding an `if` statement in the `observeEvent(input$year, {})`, as shown below[^common_app_caveats-276].
+One way to solve this is to add some extra logic to the app by selecting the current year for `selectInput()`, and adding an `if` statement in the `observeEvent(input$year, {})`, as shown below.[^common_app_caveats-276]
 
-[^when_optimize-6]: We want to thank Hadley for his help simplifying this solution <https://github.com/ThinkR-open/engineering-shiny-book/issues/276>.
+[^common_app_caveats-276]: We want to thank Hadley for his help simplifying this solution <https://github.com/ThinkR-open/engineering-shiny-book/issues/276>.
 
 ```{r 15-common-app-caveats-2, eval = FALSE}
 library(shiny)
