--- a/16-optimizing-shiny-code.Rmd
+++ b/16-optimizing-shiny-code.Rmd
@@ -22,7 +22,7 @@ Caching is the process of storing resources-intensive results so that when they 
 This is particularly useful for computation that will always return the same result, and should never be used if you expect the result could vary from one function call to the other.
 
 How does it work?
-Let's make a brief parallel with the human brain, and imagine that you know that you will need to use a phone number many times during the day, and for the purpose of this thought experiment, you are completely unable to remember it [^optimizing-shiny-code-1] .
+Let's make a brief parallel with the human brain, and imagine that you know that you will need to use a phone number many times during the day, and for the purpose of this thought experiment, you are completely unable to remember it.[^optimizing-shiny-code-1]
 What are you going to do?
 There are two solutions here: either you look in the phone book or in your phone contact list every time you need it, which takes a couple of seconds every time, or you use a post-it that you put on your computer screen with the number on it, so that you have direct access to it when you need it.
 It takes a couple of seconds the first time you look for the number, but it is almost instantaneous the next times you need it.
@@ -30,7 +30,7 @@ It takes a couple of seconds the first time you look for the number, but it is a
 [^optimizing-shiny-code-1]: Anyway, now that we all have smartphones, who still remembers phone numbers?
 
 This is what caching does: **it stores the result of an expensive computation, so that the next time you need the very same information again, you can read the result instead of redoing the full computation**.
-The downside is that you only have limited space on your screen: when your screen is covered by sticky notes, you cannot store any more notes [^optimizing-shiny-code-2] .
+The downside is that you only have limited space on your screen: when your screen is covered by sticky notes, you cannot store any more notes.[^optimizing-shiny-code-2]
 
 [^optimizing-shiny-code-2]: In that case, you can either hide pre-existing sticky notes, or buy a bigger screen.
     But we are not here to talk about cache management theory.
@@ -276,7 +276,7 @@ Since version `1.6.0`, `{shiny}` [@R-shiny] has two caching functions: `renderCa
 The extra arguments you will find are `cacheKeyExpr` and `sizePolicy`: the former is the list of inputs and values that allow you to cache the plot—every time these values and inputs are the same, they produce the same graph, so `{shiny}` will be fetching inside the cache instead of computing the value another time.
 `sizePolicy` is a function that returns a `width` and a `height`, which are used to round the plot dimension in pixels, so that not every pixel combination is generated in the cache.
 
-The good news is that converting existing `renderPlot()` functions to `renderCachedPlot()` is pretty straightforward in most cases: take your current `renderPlot()`, and add the cache keys [^optimizing-shiny-code-3] .
+The good news is that converting existing `renderPlot()` functions to `renderCachedPlot()` is pretty straightforward in most cases: take your current `renderPlot()`, and add the cache keys.[^optimizing-shiny-code-3]
 
 [^optimizing-shiny-code-3]: In some cases you will have to configure the size policy, but in most cases the default values work just well.
 
@@ -395,7 +395,7 @@ Well, at least natively, as methods have emerged to run pieces of code in parall
 
 To launch code blocks in parallel, we will use a combination of two packages, `{future}` [@R-future] and `{promises}` [@R-promises], and a `reactiveValue()`.
 `{future}` is an R package whose main purpose is to allow users to send code to be run elsewhere, i.e. in another session, thread, or even on another machine.
-`{promises}`, on the other hand, is a package providing structure for handling asynchronous programming in R [^optimizing-shiny-code-4].
+`{promises}`, on the other hand, is a package providing structure for handling asynchronous programming in R.[^optimizing-shiny-code-4]
 
 [^optimizing-shiny-code-4]: If you are familiar with promises in JavaScript, `{promises}` is an implementation of this structure into R.
 
@@ -407,7 +407,7 @@ Natively, in `{shiny}`, if *user1* launches a 15-seconds computation, then *user
 
 With `{future}` and `{promises}`, each long computation is sent to be run somewhere else, so when *user1* launches their 15-seconds computation, they are not blocking the R process for *user2* and *user3*.
 
-How does it work [^optimizing-shiny-code-5] ?
+How does it work?[^optimizing-shiny-code-5]
 `{promises}` comes with two operators which will be useful in our case, `%...>%` and `%...!%`: the first being "what happens when the `future()` is solved?" (i.e. when the computation from the `future()` is completed), and the second is "what happens if the `future()` fails?" (i.e. what to do when the `future()` returns an error).
 
 [^optimizing-shiny-code-5]: We're providing a short introduction with key concepts, but for a more thorough introduction, please refer to the [online documentation](https://rstudio.github.io/promises/index.html).
