--- a/17-javascript.Rmd
+++ b/17-javascript.Rmd
@@ -43,7 +43,7 @@ fluidPage(
 ```
 
 Later on, when the app is launched, `{shiny}` binds events to UI elements, and these JavaScript events will communicate with R, in the sense that they will send data to R, and receive data from R.
-What happens under the hood is a little bit complex and out of scope for this book, but the general idea is that R talks to your browser through a web socket (that you can imagine as a small "phone line" with both software listening at each end, both being able to send messages to the other [^javascript-1] ), and this browser talks to R through the same web socket.
+What happens under the hood is a little bit complex and out of scope for this book, but the general idea is that R talks to your browser through a web socket (that you can imagine as a small "phone line" with both software listening at each end, both being able to send messages to the other),[^javascript-1] and this browser talks to R through the same web socket.
 
 [^javascript-1]: See this post on dev.to <https://dev.to/buzzingbuzzer/comment/g0g> for a quick introduction to the general concept of web sockets.
 
@@ -61,7 +61,7 @@ What this also implies is that getting (even a little bit) better at writing HTM
 **Knowing just enough JavaScript can improve the quality of your app**: especially when you have been using R to render some complex UIs: think conditional panels, simulating a button click from the server, hide and show elements, etc.
 All these things are good examples of where you should be using JavaScript instead of building more or less complex `renderUI` or `insertUI` patterns in your server.
 
-Moreover, the number of JavaScript libraries available on the web is tremendous; and the good news is that `{shiny}` has everything it needs to bundle external JavaScript libraries inside your application [^javascript-2] .
+Moreover, the number of JavaScript libraries available on the web is tremendous; and the good news is that `{shiny}` has everything it needs to bundle external JavaScript libraries inside your application.[^javascript-2]
 
 [^javascript-2]: This can also be done by wrapping a JS libraries inside a package, which will later be used inside an application.
     See for example `{glouton}` [@R-glouton], which is a wrapper around the [`js-cookie` >https://github.com/js-cookie/js-cookie> JavaScript library.
@@ -77,7 +77,7 @@ Finally, we will quickly present some of the functions available in `{golem}` [@
 
 ### About JavaScript
 
-JavaScript is a programming language which has been designed to work in the browser [^javascript-3] .
+JavaScript is a programming language which has been designed to work in the browser.[^javascript-3]
 To play with a JavaScript console, the fastest way is to open your favorite web browser, and to open the developer tools.
 In Google Chrome, it's available under View \> Developer \> Developer Tools.
 This will open a new interface where you can have access to a JavaScript console under the Console tab.
