--- a/02-planning-ahead.Rmd
+++ b/02-planning-ahead.Rmd
@@ -47,7 +47,7 @@ The story behind this principle is supposed to be that Kelly Johnson, lead engin
 This should be a principle to keep in mind when building applications.
 Indeed, large-scale `{shiny}` projects can lead to many people working on the codebase, for a long period of time.
 **A large team means a variety of skills**, with some common ground in `{shiny}` development, but potentially various levels when it comes to R, web development, or production engineering.
-When choosing how and what to implement, **try to make a rule to go for the simplest solution** [^planning-ahead-1], *i.e.* the one that any common `{shiny}` developer would be able to understand and maintain.
+When choosing how and what to implement, **try to make a rule to go for the simplest solution**,[^planning-ahead-1] *i.e.* the one that any common `{shiny}` developer would be able to understand and maintain.
 If you go for an exotic solution or a complex technology, be sure that you are doing it for a good reason: unknown or hard-to-grasp technology reduces the chance of finding someone that will be able to maintain that piece of code in the future, and reduce the smoothness of collaboration, as "*Code you can easily comprehend elevates absolutely everyone on your team, no matter their tenure or experience level*" [@lemaire2020].
 
 [^planning-ahead-1]: Which might not be the most "elegant" solution, but production code requires pragmatism.
@@ -63,7 +63,7 @@ For example, at [ThinkR](//rtask.thinkr.fr), 3 to 4 people usually work in paral
 
 #### A. Version control and test all things {.unnumbered}
 
-To get informed about a code break during development, you will need to write tests for your app, and use continuous integration (CI) so that you are sure this is automatically detected [^planning-ahead-2].
+To get informed about a code break during development, you will need to write tests for your app, and use continuous integration (CI) so that you are sure this is automatically detected.[^planning-ahead-2]
 When you are working on a complex application, chances are that you will be working on it for a significant period of time, meaning that you will write code, modify it, use it, go back to it after a few weeks, change some other things, and probably break things.
 **Breaking things is a natural process of software engineering, notably when working on a piece of code during a long period**. Remember the last chapter where we explained that complex applications are too large to be understood fully?
 Adding code that breaks the codebase will happen with complex apps, so the sooner you take measures to solve these changes, the better.
