--- a/04-golem.Rmd
+++ b/04-golem.Rmd
@@ -117,7 +117,7 @@ When you start your project with `{golem}`, this folder is pre-populated with th
 
 During the process of building your application, all the core functionalities of your app will be stored in this `R/` directory, which is the standard way to store functions when using the R package framework.
 Note that these files are the "core" features of your application itself, and that other .R files also exists.
-For example, when you will need to deploy your application on RStudio platforms, `{golem}` will create an `app.R` at the root of your directory [^golem-1] .
+For example, when you will need to deploy your application on RStudio platforms, `{golem}` will create an `app.R` at the root of your directory.[^golem-1]
 The `dev/` folder also contains `.R` scripts, and they are inside this folder as they should not live inside the `R/` folder: they are utilitarian files used during development, not core functionalities of your application.
 
 [^golem-1]: `{golem}` will automatically add this file to the `.Rbuildignore` file, i.e. make it be ignored by the package build process.
@@ -275,7 +275,7 @@ The other part of this function, starting with `tags$head`, creates a `<head>` t
 This `<head>` tag is a pretty standard tag, which is used in HTML to define a series of metadata about your app.
 **The last part of this function, the one with `bundle_resources()`, links all the CSS and JavaScript files contained in `inst/app/www` to your application, so you don't have to link them manually**.
 
-And finally, if you want to add other elements to the `<head>` of your application (for example, by calling `shinyalert::useShinyalert()` or `cicerone::use_cicerone()` as in `{hexmake}` [^golem-2]), you can add these calls after the `bundle_resources()` function.
+And finally, if you want to add other elements to the `<head>` of your application (for example, by calling `shinyalert::useShinyalert()` or `cicerone::use_cicerone()` as in `{hexmake}`),[^golem-2] you can add these calls after the `bundle_resources()` function.
 Note that as all these elements are inside a `tags$head()`, they are to be treated as a list, so separated by commas.
 
 [^golem-2]: See <https://github.com/ColinFay/hexmake/blob/master/R/app_ui.R#L35>
@@ -313,7 +313,7 @@ run_app <- function(
 }
 ```
 
-The `run_app()` function is the one that you will use to launch the app [^golem-3] .
+The `run_app()` function is the one that you will use to launch the app.[^golem-3]
 
 [^golem-3]: Very technically speaking, it is the `print()` from the object outputed by `run_app()` that launches the app, but this is another story.
 
@@ -485,7 +485,7 @@ knitr::include_graphics("img/GOLEM_CONFIG_ACTIVE.png")
 ### `inst/app/www/`
 
 The `inst/app/www/` folder contains all files that are made available **at application run time**.
-Any web application has external files that allow it to run [^golem-4] .
+Any web application has external files that allow it to run.[^golem-4]
 For example, `{shiny}` and its `fluidPage()` function bundles a series of CSS and JavaScript files, notably the `Bootstrap` library, or `jQuery`. These external files enhance your app: CSS for the design part and JavaScript for the interactive part (more or less).
 On top of that, you can add your own files: your own design with CSS, or your own JavaScript content (as we will see in the last chapters of this book).
 In order to work, you have to include a link to these files somewhere in the UI.
