--- a/18-css.Rmd
+++ b/18-css.Rmd
@@ -107,7 +107,7 @@ Yes, that is subtle, but you can see how it makes the difference on larger apps.
 ## Getting started with CSS
 
 CSS is a descriptive language, meaning that you will have to declare the style either on a tag or inside an external file.
-We will see how to integrate CSS inside your `{shiny}` application in the next section, but before that, let's start with a short introduction to CSS [^css-1] .
+We will see how to integrate CSS inside your `{shiny}` application in the next section, but before that, let's start with a short introduction to CSS.[^css-1]
 
 [^css-1]: Of course, this part will not make you an expert CSS programmer, but we hope you will get an idea of how it works, enough to get you started and want to learn more!
 
@@ -132,7 +132,7 @@ Note that each key-value pair must end with a semicolon.
 CSS selectors are a wide topic, as there are many combinations of things you might want to select inside an HTML page.
 
 The first selector types are the "standard" ones: `name`, `id`, or `class`.
-These refer to the elements composing an HTML tag: for example, with `<h2 id = "tileone" class = "standard">One</h2>`, the name is `h2`, the id is `tileone`, and the class is `standard` [^css-2] .
+These refer to the elements composing an HTML tag: for example, with `<h2 id = "tileone" class = "standard">One</h2>`, the name is `h2`, the id is `tileone`, and the class is `standard`.[^css-2]
 
 [^css-2]: Note that in HTML, id must be unique, but class must not.
 
