--- a/19-appendix.Rmd
+++ b/19-appendix.Rmd
@@ -470,7 +470,7 @@ Once we are sure that the server running Connect has NodeJS installed, and that 
 ### Deploy with Docker {.unnumbered}
 
 To create the `Dockerfile`, we'll start by launching `golem::add_dockerfile()`.
-This function will compute the system requirements[^appendix-1], and create a generic `Dockerfile` for your application.
+This function will compute the system requirements,[^appendix-1] and create a generic `Dockerfile` for your application.
 Once this is done, we will create/update the `.dockerignore` file at the root of the package, so that unwanted files are not bundled with our Docker image.
 
 [^appendix-1]: Note that at the time of writing these lines, there is also an issue with the dependencies collected by the `sysreq` API, leading to an issue when attempting to compile the Dockerfile.
